force-app/main/default/objects/SIGHTS_CAMERA_ERROR_INF__x/SIGHTS_CAMERA_ERROR_INF__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_CAMERA_ERROR_INF</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_CAMERA_ERROR_INF</externalName>
    <label>Sightsカメラ異常状態</label>
</CustomObject>