force-app/main/default/objects/SIGHTS_CAMERA_ERROR_INF__x/fields/shock__c.field-meta.xml
<CustomField>
    <fullName>shock__c</fullName>
    <description>shock</description>
    <externalDeveloperName>shock</externalDeveloperName>
    <label>shock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>