force-app/main/default/objects/SIGHTS_CAMERA_ERROR_INF__x/fields/signal_lost__c.field-meta.xml
<CustomField>
    <fullName>signal_lost__c</fullName>
    <description>signal_lost</description>
    <externalDeveloperName>signal_lost</externalDeveloperName>
    <label>signal_lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>