force-app/main/default/objects/SIGHTS_CAMERA_ERROR_INF__x/fields/tamper__c.field-meta.xml
<CustomField>
    <fullName>tamper__c</fullName>
    <description>tamper</description>
    <externalDeveloperName>tamper</externalDeveloperName>
    <label>tamper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>