force-app/main/default/objects/SIGHTS_CAMERA_ERROR_INF__x/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <description>temperature</description>
    <externalDeveloperName>temperature</externalDeveloperName>
    <label>temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>